Update ether and textures